--- a/scss/about.scss
+++ b/scss/about.scss
@@ -28,7 +28,7 @@
 }
 
 .about.inner {
-    display: flex;
+    // display: flex;
     flex-direction: column;
     justify-content: center;
     @include push--auto;
